force-app/main/default/objects/BusinessTripRequest__c/BusinessTripRequest__c.object-meta.xml
<CustomObject>
    <label>XXXXBusiness Trip Request</label>
    <nameField>
        <displayFormat>BTR-{00000000}</displayFormat>
        <label>Business Trip Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Trip Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>