force-app/main/default/objects/BusinessTripRequest__c/fields/BusinessTrip__c.field-meta.xml
<CustomField>
    <fullName>BusinessTrip__c</fullName>
    <description>Viaje comercial relacionado</description>
    <label>Business Trip</label>
    <referenceTo>BusinessTrip__c</referenceTo>
    <relationshipName>Business_Trip_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>