force-app/main/default/objects/BusinessTripRequest__c/fields/BusinessTripStrategy__c.field-meta.xml
<CustomField>
    <fullName>BusinessTripStrategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Trip Strategy</label>
    <referenceTo>BusinessTripStrategy__c</referenceTo>
    <relationshipName>Business_Trip_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>