force-app/main/default/objects/BusinessTripRequest__c/fields/BusinessTripVisit__c.field-meta.xml
<CustomField>
    <fullName>BusinessTripVisit__c</fullName>
    <label>Business Trip Visit</label>
    <referenceTo>BusinessTripEvent__c</referenceTo>
    <relationshipName>Business_Trip_Requests</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>